fix(home): disabled out of view cards
- disable cards that are out of view
- also fixes tileDock itemSlice to correctly slice

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,9 +11,8 @@
     transform: scale(1.05);
 
     & .poster {
-      box-shadow: 0 0 0 3px var(--highlight-color, variables.$white),
-        0 8px 10px rgb(0 0 0 / 14%), 0 3px 14px rgb(0 0 0 / 12%),
-        0 4px 5px rgb(0 0 0 / 20%);
+      box-shadow: 0 0 0 3px var(--highlight-color, variables.$white), 0 8px 10px rgb(0 0 0 / 14%),
+        0 3px 14px rgb(0 0 0 / 12%), 0 4px 5px rgb(0 0 0 / 20%);
     }
   }
 }
@@ -26,6 +25,16 @@
   .meta {
     padding: 12px;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  }
+}
+
+.disabled {
+  &:hover {
+    transform: scale(1);
+    cursor: default;
+    & .poster {
+      box-shadow: none;
+    }
   }
 }
 
